--- a/pika/package.json
+++ b/pika/package.json
@@ -4,7 +4,6 @@
         "build": "npm update && npm run web"
     },
     "dependencies": {
-        "@wonkytech/tm-examples": "~0.1",
-        "@wonkytech/template-web-component": "~0.0"
+        "@wonkytech/tm-examples": "~0.1"
     }
 }
