--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "docs:open": "http-server --open docs"
     },
     "dependencies": {
+        "@wonkytech/polymer-elements": "0.0.17",
         "lit-element": "^2.0.1",
         "lit-html": "^1.0.0"
     },
