--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     },
     "dependencies": {
         "@polymer/iron-icons": "^3.0.1",
-        "@wonkytech/polymer-elements": "0.0.17",
+        "@wonkytech/polymer-elements": "~0.0",
         "lit-element": "^2.0.1",
         "lit-html": "^1.0.0"
     },
