--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "demo": "owc-dev-server",
         "demo:open": "owc-dev-server --open demo",
         "docs:clear": "rm -rf docs/web_modules",
-        "docs:install": "npm install && npx @pika/web --dest docs/web_modules",
+        "docs:install": "npm update && npx @pika/web --dest docs/web_modules",
         "docs:pika": "(cd pika; npm run build)",
         "build:docs": "npm run docs:clear && npm run docs:install && npm run docs:pika",
         "docs": "http-server docs",
