--- a/pika/package.json
+++ b/pika/package.json
@@ -5,7 +5,7 @@
     },
     "dependencies": {
         "@wonkytech/polymer-elements": "~0.0",
-        "@wonkytech/tm-examples": "~0.1",
-        "@wonkytech/tm-page-layout": "~0.1"
+        "@wonkytech/tm-examples": "^0.1.4",
+        "@wonkytech/tm-page-layout": "^0.1.2"
     }
 }
